Add problem pin validation added; Minimal work finished

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="noindex, follow" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Favicon -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.ico">
 
   <!-- all css here -->
